--- a/pages/3485.html
+++ b/pages/3485.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -559,7 +559,9 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>from the <a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a>.</p>
 
-<p>This map is traditionally denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math>, as shown.</p>
+<p>This homomorphism is traditionally denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math>, as shown.</p>
+
+<p>Its <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> is known as the <em>Brauer relations</em> (e.g. <a href="#BartelDokchitser11">Bartel-Dokchitser 11</a>).</p>
 </div>
 
 <div class="num_remark" id="VirtualLinearPermuationRepresentations">
@@ -803,6 +805,10 @@ margin-left: 0em;
 <p>I. Hambleton, L. R. Taylor, <em>Rational permutation modules for finite groups</em>, Math. Z. 231 (1999), 707–726 (<a href="https://link.springer.com/content/pdf/10.1007/PL00004749.pdf">pdf</a>)</p>
 </li>
 
+<li id="BartelDokchitser11">
+<p>Alex Bartel, Tim Dokchitser, <em>Brauer relations in finite groups</em>, J. Eur. Math. Soc. 17 (2015), 2473-2512 (<a href="https://arxiv.org/abs/1103.2047">arXiv:1103.2047</a>)</p>
+</li>
+
 <li id="BartelDokchitser14">
 <p>Alex Bartel, Tim Dokchitser, <em>Rational representations and permutation representations of finite groups</em>, Math. Ann. 364 no. 1 (2016), 539-558 (<a href="https://arxiv.org/abs/1405.6616">arXiv:1405.6616</a>)</p>
 </li>
@@ -825,14 +831,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 15:02:44.
+  Last revised on September 13, 2018 at 03:32:46.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
