--- a/pages/17551.html
+++ b/pages/17551.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -584,7 +584,7 @@ margin-left: 0em;
 <p>and the property of being <a class="existingWikiWord" href="/nlab/show/left+derived+functor">left derived</a> <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functor">strong monoidal</a> and preserving <a class="existingWikiWord" href="/nlab/show/homotopy+colimits">homotopy colimits</a>.</p>
 </div>
 
-<p>(<a href="#Blumberg17">Blumberg 17, around Def. 2.5.16</a>)</p>
+<p>(<a href="#Schwede15">Schwede 15, remark 7.15</a>, <a href="#Blumberg17">Blumberg 17, around Def. 2.5.16</a>)</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -631,14 +631,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 17, 2018 at 06:39:53.
+  Last revised on September 17, 2018 at 13:07:23.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
