--- a/pages/16174.html
+++ b/pages/16174.html
@@ -515,12 +515,14 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>this should be image of the initial morphism of <a class="existingWikiWord" href="/nlab/show/E-infinity+ring+spectra">E-infinity ring spectra</a></p>
+<p>this should be the image of the initial morphism of <a class="existingWikiWord" href="/nlab/show/E-infinity+ring+spectra">E-infinity ring spectra</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>𝕊</mi><mo>⟶</mo><mi>KU</mi></mrow><annotation encoding="application/x-tex">
   \mathbb{S} \longrightarrow KU
 
 </annotation></semantics></math></div>
 <p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to <a class="existingWikiWord" href="/nlab/show/KU">KU</a>.</p>
+
+<p>For details on this comparison map see at <em><a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a></em>, <a href="permutation+representation#ExamplesVirtualPermutationRepresentations">this section</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -605,14 +607,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 07:05:40.
+  Last revised on September 19, 2018 at 04:09:18.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
