--- a/pages/16950.html
+++ b/pages/16950.html
@@ -538,7 +538,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/permutation+matrix">permutation matrix</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/permutation+matrix">permutation matrix</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Smith+normal+form">Smith normal form</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -554,14 +560,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 13, 2018 at 04:06:04.
+  Last revised on September 19, 2018 at 05:12:50.
   See the <a href="https://ncatlab.org/nlab/history/diagonal matrix" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/diagonal+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagonal+matrix/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/diagonal+matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagonal+matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/diagonal+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagonal+matrix/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/diagonal+matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagonal+matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/diagonal matrix/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
