--- a/pages/17551.html
+++ b/pages/17551.html
@@ -586,7 +586,12 @@ margin-left: 0em;
 
 <p>(<a href="#Schwede15">Schwede 15, remark 7.15</a>, <a href="#Blumberg17">Blumberg 17, around Def. 2.5.16</a>)</p>
 
-<p id="PartialGeometricFixedPoint"> This generalizes to a “partial” geometric fixed point functor, which for a given <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math> sends</p>
+<div class="num_prop" id="PartialGeometricFixedPoint">
+<h6 id="propositionremark">Proposition/Remark</h6>
+
+<p><strong>(partial geometric fixed point spectra)</strong></p>
+
+<p>This generalizes to a “partial” geometric fixed point functor, which for a given <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math> sends</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>H</mi></msup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mi>Spectra</mi><mo>⟶</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">
   \Phi^H \;\colon\; G Spectra \longrightarrow W_G H Spectra
 
@@ -607,12 +612,13 @@ margin-left: 0em;
   \Sigma^\infty_{G/N} X^H
   \,.
 
-</annotation></semantics></math></div>
+</annotation></semantics></math></div></div>
+
 <p>(<a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86, II.9, cor. 9.9</a>, <a href="#Lewis00">Lewis 00, Scholium 10.2</a>)</p>
 
 <h3 id="AsInversionOfEulerClasses">As inversion of Euler classes</h3>
 
-<p>We discuss an explicit formula (Prop. <a class="maruku-ref" href="#GeometricFixedPointCohomologtIsColimitOverSmashWithEulerClasses"></a> below, due to <a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86</a>) that expresses <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in partial geometric fixed point spectra as the <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in the original spectrum, but with certain “<a class="existingWikiWord" href="/nlab/show/Euler+classes">Euler classes</a> <a class="existingWikiWord" href="/nlab/show/localization">inverted</a>”.</p>
+<p>We discuss an explicit formula (Prop. <a class="maruku-ref" href="#GeometricFixedPointCohomologtIsColimitOverSmashWithEulerClasses"></a> below, due to <a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86</a>) that expresses <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in partial geometric fixed point spectra (Prop. <a class="maruku-ref" href="#PartialGeometricFixedPoint"></a>) as the <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in the original spectrum, but with certain “<a class="existingWikiWord" href="/nlab/show/Euler+classes">Euler classes</a> <a class="existingWikiWord" href="/nlab/show/localization">inverted</a>”.</p>
 
 <p>As an application, we show (Example <a class="maruku-ref" href="#EquivariantStableCohomotopyOfPointsInNontrivalROGDegree"></a> below) that the <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> of the point in certain non-trivial <a class="existingWikiWord" href="/nlab/show/RO%28G%29-degrees">RO(G)-degrees</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> surjects onto the corresponding partially equivariant stable cohomotopy in degree 0 (the latter being well-understood: given by the <a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a>).</p>
 
@@ -665,7 +671,7 @@ margin-left: 0em;
 
 <p><strong>(partial geometric fixed point cohomology via inversion of Euler classes)</strong></p>
 
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">E \;\in\; G Spectra</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/G-spectrum">G-spectrum</a> with partial geometric fixed point spectrum <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>N</mi></msup><mi>E</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">\Phi^N E \;\in\; G/N Spectra</annotation></semantics></math> and let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><msup><mi>Spectra</mi> <mi>fin</mi></msup><mover><mo>⟶</mo><mrow><msup><mi>ϵ</mi> <mo>♯</mo></msup></mrow></mover><mi>G</mi><mi>Specta</mi></mrow><annotation encoding="application/x-tex">
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">E \;\in\; G Spectra</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/G-spectrum">G-spectrum</a> with partial geometric fixed point spectrum <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>N</mi></msup><mi>E</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">\Phi^N E \;\in\; G/N Spectra</annotation></semantics></math> (Prop. <a class="maruku-ref" href="#PartialGeometricFixedPoint"></a>) and let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><msup><mi>Spectra</mi> <mi>fin</mi></msup><mover><mo>⟶</mo><mrow><msup><mi>ϵ</mi> <mo>♯</mo></msup></mrow></mover><mi>G</mi><mi>Specta</mi></mrow><annotation encoding="application/x-tex">
   X
   \;\in\;
   G/N Spectra^{fin}
@@ -810,7 +816,7 @@ margin-left: 0em;
 <p>given by…</p>
 
 <blockquote>
-<p>(does this need justification? trace the definition of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">\mathcal{F}[N]</annotation></semantics></math> from <a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86, bottom of p. 109</a>)</p>
+<p>?? this clearly must be the case, but it still needs a formal argument ??</p>
 </blockquote>
 
 <p>…sending any <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/subset">subset</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>N</mi></msup></mrow><annotation encoding="application/x-tex">S^N</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> regarded with its residual <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow><annotation encoding="application/x-tex">G/N</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/action">action</a>.</p>
@@ -925,14 +931,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 06:37:29.
+  Last revised on September 19, 2018 at 09:30:54.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
