--- a/pages/16174.html
+++ b/pages/16174.html
@@ -422,7 +422,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsTheEquivariantStableCohomotopyOfThePoint">As the equivariant stable cohomotopy of the point</a></li><li><a href="#relation_to_representation_ring">Relation to representation ring</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsTheEquivariantStableCohomotopyOfThePoint">As the equivariant stable cohomotopy of the point</a></li><li><a href="#as_the_endomorphism_ring_of_the_additive_burnside_category">As the endomorphism ring of the additive Burnside category</a></li><li><a href="#relation_to_representation_ring">Relation to representation ring</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>The Burnside ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G)</annotation></semantics></math> of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is the analogue of the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> in the category of <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a>, as opposed to the category of <a class="existingWikiWord" href="/nlab/show/finite+dimensional+vector+spaces">finite dimensional vector spaces</a> over a field <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi></mrow><annotation encoding="application/x-tex">F</annotation></semantics></math>.</p>
@@ -468,6 +468,22 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/representations">representations</a> in a complete <a class="existingWikiWord" href="/nlab/show/G-universe">G-universe</a>, of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/homotopy+classes">homotopy classes</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-equivariant based <a class="existingWikiWord" href="/nlab/show/continuous+functions">continuous functions</a> from the <a class="existingWikiWord" href="/nlab/show/representation+sphere">representation sphere</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>V</mi></msup></mrow><annotation encoding="application/x-tex">S^V</annotation></semantics></math> to itself (<a href="#GreenleesMay95">Greenlees-May 95, p. 8</a>).</p>
+
+<h3 id="as_the_endomorphism_ring_of_the_additive_burnside_category">As the endomorphism ring of the additive Burnside category</h3>
+
+<div class="num_example" id="BurnsideRingIsEndomorphismRingInBurnsideCategory">
+<h6 id="example">Example</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> is <a class="existingWikiWord" href="/nlab/show/endomorphism+ring">endomorphism ring</a> of <a class="existingWikiWord" href="/nlab/show/additive+Burnside+category">additive Burnside category</a>)</strong></p>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/endomorphism+ring">endomorphism ring</a> of the <a class="existingWikiWord" href="/nlab/show/terminal+object">terminal</a> <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a> (the <a class="existingWikiWord" href="/nlab/show/point">point</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo></mrow><annotation encoding="application/x-tex">\ast</annotation></semantics></math> equipped with the, necessarily, <a class="existingWikiWord" href="/nlab/show/trivial+action">trivial action</a>) in the <a class="existingWikiWord" href="/nlab/show/additive+Burnside+category">additive Burnside category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><msub><mi>Burn</mi> <mi>ad</mi></msub></mrow><annotation encoding="application/x-tex">G Burn_{ad}</annotation></semantics></math> is the <em>Burnside ring</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G)</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>End</mi> <mrow><mi>G</mi><msub><mi>Burn</mi> <mi>ad</mi></msub></mrow></msub><mo stretchy="false">(</mo><mo>*</mo><mo>,</mo><mo>*</mo><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  End_{G Burn_{ad}}(\ast, \ast)
+  \;\simeq\;
+  A(G)
+  \,.
+
+</annotation></semantics></math></div></div>
 
 <h3 id="relation_to_representation_ring">Relation to representation ring</h3>
 
@@ -607,14 +623,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 04:09:18.
+  Last revised on September 19, 2018 at 12:13:42.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
