--- a/pages/16410.html
+++ b/pages/16410.html
@@ -542,6 +542,10 @@ margin-left: 0em;
 <li>
 <p>Jakob Moritz, Ander Retolaza, Alexander Westphal, <em>On uplifts by warped anti-D3-branes</em> (<a href="https://arxiv.org/abs/1809.06618">arXiv:1809.06618</a>)</p>
 </li>
+
+<li>
+<p>Iosif Bena, Emilian Dudas, Mariana Graña, Severin Lüst, <em>Uplifting Runaways</em> (<a href="https://arxiv.org/abs/1809.06861">arXiv:1809.06861</a>)</p>
+</li>
 </ul>
 
 <p>Discussion in the context of <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> includes</p>
@@ -557,14 +561,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 02:21:12.
+  Last revised on September 20, 2018 at 01:03:50.
   See the <a href="https://ncatlab.org/nlab/history/de Sitter spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/de+Sitter+spacetime/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/de+Sitter+spacetime/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/de Sitter spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
