--- a/pages/17551.html
+++ b/pages/17551.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8995/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8995/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -941,6 +941,10 @@ margin-left: 0em;
 <li id="MathewNaumannNoel15">
 <p><a class="existingWikiWord" href="/nlab/show/Akhil+Mathew">Akhil Mathew</a>, <a class="existingWikiWord" href="/nlab/show/Niko+Naumann">Niko Naumann</a>, <a class="existingWikiWord" href="/nlab/show/Justin+Noel">Justin Noel</a>, <em>Nilpotence and descent in equivariant stable homotopy theory</em> (<a href="http://arxiv.org/abs/1507.06869">arXiv:1507.06869</a>)</p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Bachmann">Tom Bachmann</a>, <a class="existingWikiWord" href="/nlab/show/Marc+Hoyois">Marc Hoyois</a>, remark 9.9 in <em>Norms in motivic homotopy theory</em> (<a href="https://arxiv.org/abs/1711.03061">arxiv:1711.03061</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -948,14 +952,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 13:53:49.
+  Last revised on September 20, 2018 at 03:23:17.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
